[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/buttons/SizeButton.gd" type="Script" id=1]
[ext_resource path="res://assets/images/buttons/size_highlight.png" type="Texture" id=2]

[node name="SizeButton" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 72, 72 )
script = ExtResource( 1 )

[node name="ButtonHighlight" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -44.0
margin_right = 44.0
margin_bottom = 44.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 44, 44 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="ButtonHighlight"]

[node name="ButtonBase" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="pressed" from="ButtonBase" to="." method="_on_button_pressed"]
